# simple-fw-vikas

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.compile  LICENSE  PRODUCTION_READINESS_REPORT.md  QUICKFW_SECURITY_AUDIT.md  README.md  TECHNICAL_DOCUMENTATION.md  VC_TECHNICAL_DUE_DILIGENCE.md  build.sh
.github/workflows/: ci.yml  release.yml
config/: Cargo.toml
config/src/: config.rs
docs/: API.md  INSTALL.md  OPERATOR_RUNBOOK.md  README.md  RELEASING.md  ROADMAP.md  UPGRADE.md
docs-site/: 404.html  README.md  _headers  _redirects  index.html  wrangler.toml
docs-site/api-reference/: index.html
docs-site/css/: main.css
docs-site/guides/: admin-guide.html  developer-guide.html  user-guide.html
docs-site/js/: main.js
docs-site/technical/: index.html
front/: .eslintrc.cjs  account.js  conntrack.js  core.js  dashboard.js  firewall.js  index.html  interfaces.js  nat.js  package-lock.json  package.json  settings.js  styles.css  tailwind.config.js  tsconfig.json  vite.config.ts
front/src/: index.html  main.ts
front/src/api/: client.test.ts  client.ts  endpoints.ts
front/src/components/: component.ts  modal.ts  toast.ts
front/src/pages/: audit.ts  dashboard.ts  firewall.ts  index.ts  nat.ts  network.ts  routing.ts  settings.ts  tools.ts
front/src/router/: index.ts
front/src/schemas/: audit.ts  auth.ts  common.ts  firewall.test.ts  firewall.ts  index.ts  nat.test.ts  nat.ts  network.ts  routing.ts  system.ts  tools.ts
front/src/state/: store.ts
front/src/styles/: main.css
front/src/utils/: dom.ts  formatters.test.ts  formatters.ts  index.ts
ifmgr/: Cargo.toml
ifmgr/src/: lib.rs
io/: Cargo.toml
io/src/: firewall.rs  lib.rs  nat.rs  nfqueue.rs  pcap.rs
quickfw-api/: Cargo.toml
quickfw-api/src/: audit.rs  auth.rs  config_utils.rs  file.rs  firewall_api.rs  firmware_api.rs  lib.rs  logger.rs  logs_api.rs  main.rs  migrations.rs  nat_api.rs  routing_api.rs  state.rs  system.rs  tools.rs  users.rs  users_api.rs  validation.rs
quickfw-cli/: Cargo.toml
quickfw-cli/src/: main.rs
quickfw-iso-sign/: Cargo.toml
quickfw-iso-sign/src/: main.rs
quickfw-setup/: Cargo.toml
quickfw-setup/src/: main.rs
quickfw-upgrade/: Cargo.toml
quickfw-upgrade/src/: main.rs  signature.rs  slots.rs
rootfs/etc/: issue  nftables.conf
rootfs/etc/modprobe.d/: blacklist-quickfw.conf
rootfs/etc/profile.d/: quickfw-menu.sh  quickfw.sh
rootfs/etc/ssh/sshd_config.d/: quickfw.conf
rootfs/etc/sysctl.d/: 99-quickfw-perf.conf  99-quickfw-security.conf
rootfs/etc/systemd/system/: quickfw-api.service  quickfw-boot-install.service  quickfw-cli.service  quickfw-console.service  quickfw-persist.service  quickfw-recover.service  quickfw-setup.service  quickfw-upgrade-verify.service
rootfs/usr/local/sbin/: quickfw-install  quickfw-install-tui  quickfw-menu  quickfw-persist-mount
routing/: Cargo.toml
routing/src/: bgp.rs  lib.rs  ospf.rs  rip.rs
scripts/: playwright-e2e.js  playwright-xss.js  qemu-boot-iso.sh  quickfw-console  quickfw-irq-tune  serial_cmd.py  serial_shell.py  vm_exec.py
tests/: real-test.js
