[workspace]
resolver = "2"
members = [
  "io",
  "ifmgr",
  "config",
  "routing",
  "quickfw-api",
  "quickfw-cli",
  "quickfw-setup",
  "quickfw-upgrade",
]

[workspace.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
clap = { version = "4.5.20", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.132"
serde-aux = "4.5.0"
lazy_static = "1.5.0"
