[package]
name = "quickfw-api"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "quickfw-api"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
axum = { version = "0.7.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
# rustls 0.23 made the crypto provider non-default; install `ring` so the
# binary doesn't panic on first TLS handshake. Otherwise the API exits 101
# right after printing "QuickFW API listening on https://...".
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tower = "0.5.1"
lazy_static = "1.5.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9"
tracing-subscriber = "0.3"
gfw-io = { package = "io", path = "../io" }
clap = { version = "4.5.20", features = ["derive"] }
notify = "7.0.0"
argon2 = "0.5"
rand = "0.8"
regex = "1"
tokio-util = { version = "0.7.13", features = ["rt"] }
tokio-stream = "0.1"
routing = { path = "../routing" }
subtle = "2.6"
base64 = "0.22"
