[package]
name = "quickfw-iso-sign"
version = "1.0.0"
edition = "2021"
description = "Offline signer / keypair generator for QuickFW release ISOs."

[[bin]]
name = "quickfw-iso-sign"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
