[package]
name = "quickfw-setup"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "quickfw-setup"
path = "src/main.rs"

[dependencies]
# pfSense-style minimal wizard — no ifmgr / serde dependencies. We write
# YAML directly with format!() and run `ip` commands for addressing. The
# heavy lifting (multi-interface zoning, DHCP server, FW rules) all moves
# to the web UI where the operator has visual feedback.
