[package]
name = "quickfw-upgrade"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "quickfw-upgrade"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
sha2 = "0.10"
# ed25519-dalek / minisign proper deps are a later refinement; for now we
# accept a signed manifest (iso + sha256 + ed25519 signature over the hash)
# and verify with a trusted public key baked at compile time.
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
